Added SonarCloud.