@@ -20,6 +20,7 @@ import org.mockito.quality.Strictness;
 
 import java.util.ArrayList;
 import java.util.Arrays;
+import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
@@ -28,6 +29,7 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 @ExtendWith(MockitoExtension.class)
 @MockitoSettings(strictness = Strictness.LENIENT)
 class PawnLogicTest {
+    private static final char        DELIMITER                   = ';';
     private static final Coordinates VALID_MOVE_COORDINATES_FROM = new Coordinates(3, 3);
     private static final Coordinates VALID_MOVE_COORDINATES_TO   = new Coordinates(3, 2);
 
@@ -40,6 +42,9 @@ class PawnLogicTest {
 
     @Mock
     private GridLogic gridLogic;
+
+    @Mock
+    private CheckLogic checkLogic;
 
     @Test
     void testIsPawnBeingPromoted_WhenBlackPawnEndsAtTheLastRow_ThenReturnTrue() {
@@ -94,15 +99,13 @@ class PawnLogicTest {
             "4;7;5;6;false",
             "4;7;3;5;false",
             "4;7;4;5;true",
-            "4;7;5;5;false"}, delimiter = ';')
+            "4;7;5;5;false"}, delimiter = DELIMITER)
     void testIsValidMove_BasicLineMovesBlack(int fromX, int fromY, int toX, int toY, boolean expected) {
         Field from = new Field().setPiece(new Pawn().setColor(Color.BLACK)).setCoordinates(new Coordinates(fromX, fromY));
         Field to = new Field().setCoordinates(new Coordinates(toX, toY));
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
-
-        boolean actual = pawnLogic.isValidMove(grid, from, to, opponentFactory, false);
+        boolean actual = pawnLogic.isValidMove(grid, from, to, false);
         assertEquals(expected, actual);
     }
 
@@ -119,15 +122,15 @@ class PawnLogicTest {
             "5;2;6;2;false",
             "5;2;4;1;false",
             "5;2;5;1;false",
-            "5;2;6;1;false"}, delimiter = ';')
+            "5;2;6;1;false"}, delimiter = DELIMITER)
     void testIsValidMove_BasicLineMovesWhite(int fromX, int fromY, int toX, int toY, boolean expected) {
         Field from = new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(new Coordinates(fromX, fromY));
         Field to = new Field().setCoordinates(new Coordinates(toX, toY));
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
-        boolean actual = pawnLogic.isValidMove(grid, from, to, opponentFactory, false);
+        boolean actual = pawnLogic.isValidMove(grid, from, to, false);
         assertEquals(expected, actual);
     }
 
@@ -141,15 +144,15 @@ class PawnLogicTest {
             "4;4;5;4;false",
             "4;4;3;3;false",
             "4;4;4;3;true",
-            "4;4;5;3;false"}, delimiter = ';')
+            "4;4;5;3;false"}, delimiter = DELIMITER)
     void testIsValidMove_BasicMovesBlack(int fromX, int fromY, int toX, int toY, boolean expected) {
         Field from = new Field().setPiece(new Pawn().setColor(Color.BLACK)).setCoordinates(new Coordinates(fromX, fromY));
         Field to = new Field().setCoordinates(new Coordinates(toX, toY));
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
-        boolean actual = pawnLogic.isValidMove(grid, from, to, opponentFactory, false);
+        boolean actual = pawnLogic.isValidMove(grid, from, to, false);
         assertEquals(expected, actual);
     }
 
@@ -166,32 +169,33 @@ class PawnLogicTest {
             "4;4;5;3;false",
             "4;4;3;2;false",
             "4;4;4;2;false",
-            "4;4;5;2;false"}, delimiter = ';')
+            "4;4;5;2;false"}, delimiter = DELIMITER)
     void testIsValidMove_BasicMovesWhite(int fromX, int fromY, int toX, int toY, boolean expected) {
         Field from = new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(new Coordinates(fromX, fromY));
         Field to = new Field().setCoordinates(new Coordinates(toX, toY));
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
-        boolean actual = pawnLogic.isValidMove(grid, from, to, opponentFactory, false);
+        boolean actual = pawnLogic.isValidMove(grid, from, to, false);
         assertEquals(expected, actual);
     }
 
     @ParameterizedTest
     @CsvSource(value = {
-            "3;3;true", "4;3;true", "5;3;true", "3;4;false", "4;4;false", "5;4;false", "3;5;false", "4;5;false", "5;5;false"}, delimiter = ';')
+            "3;3;true", "4;3;true", "5;3;true", "3;4;false", "4;4;false", "5;4;false", "3;5;false", "4;5;false", "5;5;false"}, delimiter = DELIMITER)
     void testIsValidMove_WhenBlackCapturesWhiteEnPassant_ThenReturnTrue(int toX, int toY, boolean expected) {
         Field from = new Field().setPiece(new Pawn().setColor(Color.BLACK)).setCoordinates(new Coordinates(4, 4));
         Field to = new Field().setCoordinates(new Coordinates(toX, toY));
         Grid grid = new Grid(Arrays.asList(new Field()
                         .setPiece(new Pawn().setMayBeCapturedEnPassant(true).setColor(Color.WHITE))
                         .setCoordinates(new Coordinates(3, 4)),
-                new Field().setPiece(new Pawn().setMayBeCapturedEnPassant(true).setColor(Color.WHITE)).setCoordinates(new Coordinates(5, 4))));
+                new Field().setPiece(new Pawn().setMayBeCapturedEnPassant(true).setColor(Color.WHITE)).setCoordinates(new Coordinates(5, 4))),
+                gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
-        boolean actual = pawnLogic.isValidMove(grid, from, to, opponentFactory, false);
+        boolean actual = pawnLogic.isValidMove(grid, from, to, false);
         assertEquals(expected, actual);
     }
 
@@ -205,15 +209,15 @@ class PawnLogicTest {
             "4;4;5;4;false",
             "4;4;3;3;true",
             "4;4;4;3;false",
-            "4;4;5;3;true"}, delimiter = ';')
+            "4;4;5;3;true"}, delimiter = DELIMITER)
     void testIsValidMove_WhenBlackCapturesWhite_ThenReturnTrue(int fromX, int fromY, int toX, int toY, boolean expected) {
         Field from = new Field().setPiece(new Pawn().setColor(Color.BLACK)).setCoordinates(new Coordinates(fromX, fromY));
         Field to = new Field().setCoordinates(new Coordinates(toX, toY)).setPiece(new Pawn().setColor(Color.WHITE));
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
-        boolean actual = pawnLogic.isValidMove(grid, from, to, opponentFactory, false);
+        boolean actual = pawnLogic.isValidMove(grid, from, to, false);
         assertEquals(expected, actual);
     }
 
@@ -221,56 +225,57 @@ class PawnLogicTest {
     void testIsValidMove_WhenFriendlyFire_ThenReturnFalse() {
         Field from = new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(VALID_MOVE_COORDINATES_FROM);
         Field to = new Field().setCoordinates(VALID_MOVE_COORDINATES_TO);
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
         Mockito.doReturn(true).when(pawnLogic).isFriendlyFire(from.getPiece(), to);
 
-        assertFalse(pawnLogic.isValidMove(grid, from, to, opponentFactory, false));
+        assertFalse(pawnLogic.isValidMove(grid, from, to, false));
     }
 
     @Test
     void testIsValidMove_WhenInCheck_ThenReturnFalse() {
         Field from = new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(VALID_MOVE_COORDINATES_FROM);
         Field to = new Field().setCoordinates(VALID_MOVE_COORDINATES_TO);
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(true).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(true).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
-        assertFalse(pawnLogic.isValidMove(grid, from, to, opponentFactory, false));
+        assertFalse(pawnLogic.isValidMove(grid, from, to, false));
     }
 
     @Test
     void testIsValidMove_WhenJumping_ThenReturnFalse() {
         Field from = new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(VALID_MOVE_COORDINATES_FROM);
         Field to = new Field().setCoordinates(VALID_MOVE_COORDINATES_TO);
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
         Mockito.doReturn(true).when(pawnLogic).isJumping(grid, from, to);
 
-        assertFalse(pawnLogic.isValidMove(grid, from, to, opponentFactory, false));
+        assertFalse(pawnLogic.isValidMove(grid, from, to, false));
     }
 
     @Test
     void testIsValidMove_WhenNullValues_ThenReturnFalse() {
-        assertFalse(pawnLogic.isValidMove(null, null, null, null, false));
+        assertFalse(pawnLogic.isValidMove(null, null, null, false));
     }
 
     @ParameterizedTest
     @CsvSource(value = {
-            "3;5;true", "4;5;true", "5;5;true", "3;4;false", "4;4;false", "5;4;false", "3;3;false", "4;3;false", "5;3;false"}, delimiter = ';')
+            "3;5;true", "4;5;true", "5;5;true", "3;4;false", "4;4;false", "5;4;false", "3;3;false", "4;3;false", "5;3;false"}, delimiter = DELIMITER)
     void testIsValidMove_WhenWhiteCapturesBlackEnPassant_ThenReturnTrue(int toX, int toY, boolean expected) {
         Field from = new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(new Coordinates(4, 4));
         Field to = new Field().setCoordinates(new Coordinates(toX, toY));
         Grid grid = new Grid(Arrays.asList(new Field()
                         .setPiece(new Pawn().setMayBeCapturedEnPassant(true).setColor(Color.BLACK))
                         .setCoordinates(new Coordinates(3, 4)),
-                new Field().setPiece(new Pawn().setMayBeCapturedEnPassant(true).setColor(Color.BLACK)).setCoordinates(new Coordinates(5, 4))));
+                new Field().setPiece(new Pawn().setMayBeCapturedEnPassant(true).setColor(Color.BLACK)).setCoordinates(new Coordinates(5, 4))),
+                gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
-        boolean actual = pawnLogic.isValidMove(grid, from, to, opponentFactory, false);
+        boolean actual = pawnLogic.isValidMove(grid, from, to, false);
         assertEquals(expected, actual);
     }
 
@@ -284,15 +289,15 @@ class PawnLogicTest {
             "4;4;5;4;false",
             "4;4;3;3;false",
             "4;4;4;3;false",
-            "4;4;5;3;false"}, delimiter = ';')
+            "4;4;5;3;false"}, delimiter = DELIMITER)
     void testIsValidMove_WhenWhiteCapturesBlack_ThenReturnTrue(int fromX, int fromY, int toX, int toY, boolean expected) {
         Field from = new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(new Coordinates(fromX, fromY));
         Field to = new Field().setCoordinates(new Coordinates(toX, toY)).setPiece(new Pawn().setColor(Color.BLACK));
-        Grid grid = new Grid(new ArrayList<>());
+        Grid grid = new Grid(new ArrayList<>(), gridLogic);
 
-        Mockito.doReturn(false).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(false).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
-        boolean actual = pawnLogic.isValidMove(grid, from, to, opponentFactory, false);
+        boolean actual = pawnLogic.isValidMove(grid, from, to, false);
         assertEquals(expected, actual);
     }
 
@@ -300,9 +305,9 @@ class PawnLogicTest {
     void testMayBeCapturedEnPassant_WhenBlackMovesNextToWhite_ThenReturnTrue() {
         Field from = new Field().setPiece(new Pawn().setColor(Color.BLACK)).setCoordinates(new Coordinates(3, 7));
         Field to = new Field().setCoordinates(new Coordinates(3, 5));
-        Grid grid = new Grid(Arrays.asList(new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(new Coordinates(4, 5))));
+        Grid grid = new Grid(List.of(new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(new Coordinates(4, 5))), gridLogic);
 
-        Mockito.doReturn(true).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(true).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
         assertTrue(pawnLogic.mayBeCapturedEnPassant(grid, from, to));
     }
@@ -311,9 +316,9 @@ class PawnLogicTest {
     void testMayBeCapturedEnPassant_WhenWhiteMovesNextToBlack_ThenReturnTrue() {
         Field from = new Field().setPiece(new Pawn().setColor(Color.WHITE)).setCoordinates(new Coordinates(3, 2));
         Field to = new Field().setCoordinates(new Coordinates(3, 4));
-        Grid grid = new Grid(Arrays.asList(new Field().setPiece(new Pawn().setColor(Color.BLACK)).setCoordinates(new Coordinates(4, 4))));
+        Grid grid = new Grid(List.of(new Field().setPiece(new Pawn().setColor(Color.BLACK)).setCoordinates(new Coordinates(4, 4))), gridLogic);
 
-        Mockito.doReturn(true).when(pawnLogic).isMovingIntoCheck(grid, from, to, false, opponentFactory);
+        Mockito.doReturn(true).when(checkLogic).isMovingIntoCheck(grid, from, to, false, gridLogic);
 
         assertTrue(pawnLogic.mayBeCapturedEnPassant(grid, from, to));
     }
